SCSSを編集しました。

--- a/開発用/public/index.html
+++ b/開発用/public/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="./assets/css/style.min.css">
 </head>
 
 <body>
 	<p>test</p>
 	<p>test</p>
 	<p>test</p>
+	<button class="c-search-btn">
+		<a href="#">
+			空室検索
+		</a>
+	</button>
 </body>
 
 </html>
