linkで読み込むcssをstyle.css→style.min.cssに変更しました

--- a/開発用/src/guest-room.html
+++ b/開発用/src/guest-room.html
@@ -6,7 +6,7 @@
         <title>客室</title>
         <meta name="description" content="客室のページです">
         <link rel="stylesheet" href="../public/assets/css/reset.css">
-        <link rel="stylesheet" href="../public/assets/css/style.css">
+        <link rel="stylesheet" href="../public/assets/css/style.min.css">
     </head>
     <body>
         <header class="l-lower-header">
