W3Cの文法チェックに引っかかったので、ハンバーガーメニュー(ulとliの間に何も入れない)とセクション(見出しの無いセクションは作れない)を修正しました。また、cooking.htmlを作成(途中)。

--- a/開発用/src/guest-room.html
+++ b/開発用/src/guest-room.html
@@ -12,59 +12,58 @@
         <header class="l-lower-header">
             <h1 class="l-lower-header__title">客 室</h1>
             <!-- ハンバーガーメニュー -->
-            <div class="p-drawer">
-                <div class="c-drawer-btn p-drawer__btn">
-                    <span class="c-drawer-btn__bar"></span>
-                    <span class="c-drawer-btn__bar"></span>
-                    <span class="c-drawer-btn__bar"></span>
-                </div>
+            <div class="c-drawer-btn l-lower-headerr__btn">
+                <span class="c-drawer-btn__bar"></span>
+                <span class="c-drawer-btn__bar"></span>
+                <span class="c-drawer-btn__bar"></span>
+            </div>
+            <nav class="p-drawer">
+                <a class="c-logo p-drawer__logo" href="index.html">
+                    <p class="c-logo__img">
+                        <img src="../public/assets/img/common/logo-white.png" alt="きずなや">
+                    </p>
+                    <p class="c-logo__text">KIZUNAYA</p>
+                </a>
                 <ul class="p-drawer__nav js-link" id="drawer-nav">
-                    <a class="c-logo p-drawer__logo" href="index.html">
-                        <p class="c-logo__img">
-                            <img src="../public/assets/img/common/logo-white.png" alt="きずなや">
-                        </p>
-                        <p class="c-logo__text">KIZUNAYA</p>
-                    </a>
                     <li class="p-drawer__nav-list">
                         <a href="index.html" class="p-drawer__nav-link p-dnav-anm">
                             温泉
                         </a>
-                        <!-- /.p-drawer__nav-link p-dnav-anm -->
                     </li>
                     <li class="p-drawer__nav-list">
                         <a href="index.html" class="p-drawer__nav-link p-dnav-anm">
                             客室
                         </a>
-                        <!-- /.p-drawer__nav-link p-dnav-anm -->
                     </li>
                     <li class="p-drawer__nav-list">
                         <a href="index.html" class="p-drawer__nav-link p-dnav-anm">
                             料理
                         </a>
-                        <!-- /.p-drawer__nav-link p-dnav-anm -->
                     </li>
                     <li class="p-drawer__nav-list">
                         <a href="index.html" class="p-drawer__nav-link p-dnav-anm">
                             過ごし方
                         </a>
-                        <!-- /.p-drawer__nav-link p-dnav-anm -->
                     </li>
                     <li class="p-drawer__nav-list">
                         <a href="index.html" class="p-drawer__nav-link p-dnav-anm">
                             アクセス
                         </a>
-                        <!-- /.p-drawer__nav-link p-dnav-anm -->
                     </li>
                 </ul>
-                <!-- /.p-drawer-nav -->
-            </div>
+                <div class="c-drawer-btn p-drawer__btn">
+                    <span class="c-drawer-btn__bar"></span>
+                    <span class="c-drawer-btn__bar"></span>
+                    <span class="c-drawer-btn__bar"></span>
+                </div>
+            </nav>
         </header>
         <!-- /.l-header -->
         <main class="l-main">
             <div class="l-inner">
-                <section class="p-opening-sentence">
+                <div class="p-opening-sentence">
                     <p class="p-opening-sentence__text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                </section>
+                </div>
                 <section class="p-room">
                     <div class="p-room__version">
                         <div class="p-room__imgs">
@@ -149,7 +148,7 @@
                         ※お煙草お部屋は全室禁煙です。テラスでのみ喫煙できます。
                     </p>
                 </section>
-                <section class="p-check-io">
+                <div class="p-check-io">
                     <div class="p-check-io__contents">
                         <div class="p-check-io__icon">
                             <img src="../public/assets/img/guest-room/icon-checkIn.svg" alt="アーリーチェックイン">
@@ -166,7 +165,7 @@
                         <p class="p-check-io__text">旅の余韻を感じながらゆっくりお帰りの準備をしていただけます。</p>
                     </div>
                     <!-- /.Facility__contents -->
-                </section>
+                </div>
                 <section class="p-reservation">
                     <h2 class="p-reservation__title">ご予約</h2>
                     <p class="p-reservation__text">
