--- a/開発用/public/cooking.html
+++ b/開発用/public/cooking.html
@@ -62,113 +62,101 @@
 	</header>
 	<!-- /.l-header -->
 	<main class="l-main">
-		<div class="l-inner">
-			<div class="p-opening-sentence">
+		<div class="p-opening-sentence">
+			<div class="l-inner">
 				<p class="p-opening-sentence__text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			</div>
-			<section class="p-room">
-				<div class="p-room__version">
-					<div class="p-room__imgs">
-						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/sazanami1.jpg" alt="漣のベッドルーム">
-						</div>
-						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/sazanami2.jpg" alt="漣の客室">
-						</div>
-						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/sazanami3.jpg" alt="鹿威し">
-						</div>
-					</div>
-					<div class="p-room__sentence">
-						<h2 class="p-room__title">
-							漣
-							<span class="p-room__title-eng">Sazanami</span>
-						</h2>
-						<p class="p-room__text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-						<div class="p-room__text-bottom">
-							<p class="p-room__text">定員　2名</p>
-							<p class="p-room__text">広さ　和室　10畳＋８畳</p>
-						</div>
-					</div>
+		</div>
+		<section class="p-course">
+			<div class="p-course__version">
+				<div class="p-course__gallery">
+					<img src="../public/assets/img/cooking/sea1.jpg" alt="フグのお刺身">
+					<img src="../public/assets/img/cooking/sea2.jpg" alt="蒸しガニ">
+					<img src="../public/assets/img/cooking/sea3.jpg" alt="カニのしゃぶしゃぶ">
+					<img src="../public/assets/img/cooking/sea4.jpg" alt="刺身盛合せ">
+					<img src="../public/assets/img/cooking/sea5.jpg" alt="蟹味噌甲羅焼き">
 				</div>
-				<div class="p-room__version">
-					<div class="p-room__imgs">
-						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/nagi1.jpg" alt="凪のベッドルーム">
-						</div>
-						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/nagi2.jpg" alt="タオル">
-						</div>
-						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/nagi3.jpg" alt="ソファ">
-						</div>
-					</div>
-					<div class="p-room__sentence">
-						<h2 class="p-room__title">
-							凪
-							<span class="p-room__title__eng">Nagi</span>
-						</h2>
-						<!-- /.room-title -->
-						<p class="p-room__text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-						<div class="p-room__text-bottom">
-							<p class="p-room__text">定員　2名</p>
-							<p class="p-room__text">広さ　和洋室　10畳＋８畳</p>
-						</div>
-					</div>
+				<div class="p-course__menu">
+					<h2 class="p-course__title">海の幸コース</h2>
+					<ul class="p-course__list">
+						<li class="p-course__item">カニのしゃぶしゃぶ</li>
+						<li class="p-course__item">蒸しガニ</li>
+						<li class="p-course__item">蟹味噌甲羅焼き</li>
+						<li class="p-course__item">フグのお刺身</li>
+						<li class="p-course__item">刺身盛合せ</li>
+						<li class="p-course__item">茶碗蒸し</li>
+						<li class="p-course__item">カニのリゾット</li>
+						<li class="p-course__item">バニラアイス</li>
+					</ul>
 				</div>
-				<div class="p-room__version">
-					<div class="p-room__imgs">
-						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/sazanami1.jpg" alt="渚のベッドルーム">
-						</div>
-						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/sazanami2.jpg" alt="渚の客室内">
-						</div>
-						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/sazanami3.jpg" alt="渚のバスルーム">
-						</div>
-					</div>
-					<div class="p-room__sentence">
-						<h2 class="p-room__title">
-							渚
-							<span class="p-room__title__eng">Nagisa</span>
-						</h2>
-						<p class="p-room__text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-						<div class="p-room__text-bottom">
-							<p class="p-room__text">定員　４名</p>
-							<p class="p-room__text">広さ　洋室　10畳＋８畳</p>
-						</div>
-					</div>
-				</div>
-			</section>
-			<section class="p-facility">
-				<h2 class="p-facility__title">お部屋設備</h2>
-				<p class="p-facility__text">
-					客室内設備冷暖房／ツインベッド（和洋室）※2／開閉式露天風呂・シャワー／テラス／洗面所／洋式トイレ（ウォシュレット）／金庫／ドライヤー／冷蔵庫※3／湯沸しポット／お茶セット／32インチ液晶テレビ／衛星放送／インターネット接続（無線LAN）アメニティシャンプー・リンス／ボディソープ・石鹸／タオル・バスタオル※4／ハミガキセット／くし・ブラシ／ドライヤー／髭剃り／浴衣／スリッパ
-					<br>
-					<br>
-					※お煙草お部屋は全室禁煙です。テラスでのみ喫煙できます。
-				</p>
-			</section>
-			<div class="p-check-io">
-				<div class="p-check-io__contents">
-					<div class="p-check-io__icon">
-						<img src="../public/assets/img/guest-room/icon-checkIn.svg" alt="アーリーチェックイン">
-					</div>
-					<p class="p-check-io__title">アーリーチェックイン</p>
-					<p class="p-check-io__text">早めのチェックインで明るいうちから温泉を愉しめます。</p>
-				</div>
-				<!-- /.Facility__contents -->
-				<div class="p-check-io__contents">
-					<div class="p-check-io__icon">
-						<img src="../public/assets/img/guest-room/icon-checkOut.svg" alt="アーリーチェックアウト">
-					</div>
-					<p class="p-check-io__title">アーリーチェックアウト</p>
-					<p class="p-check-io__text">旅の余韻を感じながらゆっくりお帰りの準備をしていただけます。</p>
-				</div>
-				<!-- /.Facility__contents -->
 			</div>
-			<section class="p-reservation">
+			<div class="p-course__version">
+				<div class="p-course__gallery">
+					<img src="../public/assets/img/cooking/luxury1.jpg" alt="フグのお刺身">
+					<img src="../public/assets/img/cooking/luxury2.jpg" alt="フグのお刺身">
+					<img src="../public/assets/img/cooking/luxury3.jpg" alt="フグのお刺身">
+					<img src="../public/assets/img/cooking/luxury4.jpg" alt="フグのお刺身">
+					<img src="../public/assets/img/cooking/luxury5.jpg" alt="フグのお刺身">
+				</div>
+				<div class="p-course__menu">
+					<h2 class="p-course__title">贅沢コース</h2>
+					<ul class="p-course__list">
+						<li class="p-course__item">すき焼き</li>
+						<li class="p-course__item">生桜エビ</li>
+						<li class="p-course__item">ホタテのバター焼き</li>
+						<li class="p-course__item">和牛ステーキ</li>
+						<li class="p-course__item">刺身盛合せ</li>
+						<li class="p-course__item">茶碗蒸し</li>
+						<li class="p-course__item">ホタテご飯</li>
+						<li class="p-course__item">バニラアイス</li>
+					</ul>
+				</div>
+			</div>
+		</section>
+		<section class="p-dish">
+			<div class="l-inner">
+				<h2 class="p-dish__title">一品料理</h2>
+				<ul class="p-dish__list">
+					<li class="p-dish__item">
+						<div class="p-dish__img">
+							<img src="../public/assets/img/cooking/dish1.jpg" alt="KIZUNAYA特製だし巻き卵">
+						</div>
+						<p class="p-dish__text">KIZUNAYA特製だし巻き卵</p>
+					</li>
+					<li class="p-dish__item">
+						<div class="p-dish__img">
+							<img src="../public/assets/img/cooking/dish2.jpg" alt="KIZUNAYA特製天ぷら">
+						</div>
+						<p class="p-dish__text">KIZUNAYA特製天ぷら</p>
+					</li>
+					<li class="p-dish__item">
+						<div class="p-dish__img">
+							<img src="../public/assets/img/cooking/dish3.jpg" alt="KIZUNAYA特製お漬物">
+						</div>
+						<p class="p-dish__text">KIZUNAYA特製お漬物</p>
+					</li>
+				</ul>
+			</div>
+		</section>
+		<section class="p-dish">
+			<div class="l-inner">
+				<h2 class="p-dish__title">お食事処</h2>
+				<ul class="p-dish__list">
+					<li class="p-dish__item">
+						<div class="p-dish__img">
+							<img src="../public/assets/img/cooking/restaurant1.jpg" alt="開放的なお食事処">
+						</div>
+					</li>
+					<li class="p-dish__item">
+						<div class="p-dish__img">
+							<img src="../public/assets/img/cooking/restaurant2.jpg" alt="個室のお食事処">
+						</div>
+					</li>
+				</ul>
+			</div>
+		</section>
+		<section class="p-reservation">
+			<div class="l-inner">
 				<h2 class="p-reservation__title">ご予約</h2>
 				<p class="p-reservation__text">
 					ご予約は専用フォームにて承ります
@@ -177,8 +165,8 @@
 				<p class="p-reservation__text">
 					ご予約は専用フォームにて承ります
 				</p>
-			</section>
-		</div>
+			</div>
+		</section>
 	</main>
 </body>
 
