--- a/開発用/public/spend.html
+++ b/開発用/public/spend.html
@@ -21,6 +21,7 @@
 				テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
 			</p>
 		</section>
+		
 		<section class="p-spend-tour">
 			<h2 class="p-spend-tour__title">周辺観光</h2>
 			<div class="p-spend-tour__cards">
@@ -85,6 +86,8 @@
 			</div>
 		</section>
 	</div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollTrigger.min.js"></script>
 </body>
 
 </html>
