--- a/開発用/src/guest-room.html
+++ b/開発用/src/guest-room.html
@@ -5,53 +5,55 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>客室</title>
         <meta name="description" content="客室のページです">
+        <!-- googlefonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;800&family=Zen+Kaku+Gothic+New:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../public/assets/css/reset.css">
         <link rel="stylesheet" href="../public/assets/css/style.min.css">
     </head>
-    <body>
+    <body id="guest-room">
         <header class="l-lower-header">
-            <h1 class="l-lower-header__title">客 室</h1>
+            <h1 class="c-title l-lower-header__title">客 室</h1>
             <!-- ハンバーガーメニュー -->
             <div class="c-drawer-btn l-lower-headerr__btn">
                 <span class="c-drawer-btn__bar"></span>
-                <span class="c-drawer-btn__bar"></span>
-                <span class="c-drawer-btn__bar"></span>
             </div>
-            <nav class="p-drawer">
-                <a class="c-logo p-drawer__logo" href="index.html">
+            <nav class="p-gnav">
+                <a class="c-logo p-gnav__logo" href="index.html">
                     <p class="c-logo__img">
                         <img src="../public/assets/img/common/logo-white.png" alt="きずなや">
                     </p>
                     <p class="c-logo__text">KIZUNAYA</p>
                 </a>
-                <ul class="p-drawer__nav js-link" id="drawer-nav">
-                    <li class="p-drawer__nav-list">
-                        <a href="index.html" class="p-drawer__nav-link p-dnav-anm">
+                <ul class="p-gnav__nav js-link" id="gnav">
+                    <li class="p-gnav__nav-list">
+                        <a href="index.html" class="p-gnav__nav-link p-gnev-anm">
                             温泉
                         </a>
                     </li>
-                    <li class="p-drawer__nav-list">
-                        <a href="index.html" class="p-drawer__nav-link p-dnav-anm">
+                    <li class="p-gnav__nav-list">
+                        <a href="index.html" class="p-gnav__nav-link p-gnev-anm">
                             客室
                         </a>
                     </li>
-                    <li class="p-drawer__nav-list">
-                        <a href="index.html" class="p-drawer__nav-link p-dnav-anm">
+                    <li class="p-gnav__nav-list">
+                        <a href="index.html" class="p-gnav__nav-link p-gnev-anm">
                             料理
                         </a>
                     </li>
-                    <li class="p-drawer__nav-list">
-                        <a href="index.html" class="p-drawer__nav-link p-dnav-anm">
+                    <li class="p-gnav__nav-list">
+                        <a href="index.html" class="p-gnav__nav-link p-gnev-anm">
                             過ごし方
                         </a>
                     </li>
-                    <li class="p-drawer__nav-list">
-                        <a href="index.html" class="p-drawer__nav-link p-dnav-anm">
+                    <li class="p-gnav__nav-list">
+                        <a href="index.html" class="p-gnav__nav-link p-gnev-anm">
                             アクセス
                         </a>
                     </li>
                 </ul>
-                <div class="c-drawer-btn p-drawer__btn">
+                <div class="c-drawer-btn p-gnav__btn">
                     <span class="c-drawer-btn__bar"></span>
                     <span class="c-drawer-btn__bar"></span>
                     <span class="c-drawer-btn__bar"></span>
