--- a/開発用/public/guest-room.html
+++ b/開発用/public/guest-room.html
@@ -7,7 +7,7 @@
 	<title>客室</title>
 	<meta name="description" content="客室のページです">
 	<link rel="stylesheet" href="../public/assets/css/reset.css">
-	<link rel="stylesheet" href="../public/assets/css/style.css">
+	<link rel="stylesheet" href="../public/assets/css/style.min.css">
 </head>
 
 <body>
