メインメッセージのクラス名を変更しました。

--- a/開発用/public/spend.html
+++ b/開発用/public/spend.html
@@ -20,7 +20,7 @@
 		<button class="c-search-btn">
 			<a href="#" class="c-search-btn__link">空 室 検 索</a>
 		</button>
-		<section class="p-spend-message">
+		<section class="c-main-message">
 			<p class="p-spend-message__text">
 				テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
 			</p>
