過ごし方ページの大枠が完成しました。残り画像の配置調整と横スクロールセクションの進捗バーの実装です。

--- a/開発用/public/spend.html
+++ b/開発用/public/spend.html
@@ -21,7 +21,7 @@
 			<a href="#" class="c-search-btn__link">空 室 検 索</a>
 		</button>
 		<section class="c-main-message">
-			<p class="p-spend-message__text">
+			<p class="c-spend-message__text">
 				テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
 			</p>
 		</section>
