プログレスバーの型を作成しました。

--- a/開発用/public/spend.html
+++ b/開発用/public/spend.html
@@ -26,61 +26,8 @@
 			</p>
 		</section>
 		<section class="p-spend-slide">
-			<div class="flow-progress">
-				<div class="flow-progress__item trigger-checkin">
-					<span class="flow-progress__dots"></span>
-					<span class="flow-progress__line">
-						<span></span>
-					</span>
-				</div>
-				<div class="flow-progress__item trigger-spa1">
-					<span class="flow-progress__dots"></span>
-					<span class="flow-progress__line">
-						<span></span>
-					</span>
-				</div>
-				<div class="flow-progress__item trigger-dinner">
-					<span class="flow-progress__dots"></span>
-					<span class="flow-progress__line">
-						<span></span>
-					</span>
-				</div>
-				<div class="flow-progress__item trigger-walking">
-					<span class="flow-progress__dots"></span>
-					<span class="flow-progress__line">
-						<span></span>
-					</span>
-				</div>
-				<div class="flow-progress__item trigger-spa2">
-					<span class="flow-progress__dots"></span>
-					<span class="flow-progress__line">
-						<span></span>
-					</span>
-				</div>
-				<div class="flow-progress__item trigger-retiring">
-					<span class="flow-progress__dots"></span>
-					<span class="flow-progress__line">
-						<span></span>
-					</span>
-				</div>
-				<div class="flow-progress__item trigger-spa3">
-					<span class="flow-progress__dots"></span>
-					<span class="flow-progress__line">
-						<span></span>
-					</span>
-				</div>
-				<div class="flow-progress__item trigger-breakfast">
-					<span class="flow-progress__dots"></span>
-					<span class="flow-progress__line">
-						<span></span>
-					</span>
-				</div>
-				<div class="flow-progress__item trigger-checkin">
-					<span class="flow-progress__dots"></span>
-				</div>
-			</div>
-			<div class="p-spend-slide__wrapper">
-				<div class="p-spend-slide__block p-spend-slide__block1">
+			<ul class="p-spend-slide__wrapper">
+				<li class="p-spend-slide__block p-spend-slide__block1">
 					<div class="p-spend-slide__card p-spend-slide__card1">
 						<p class="p-spend-slide__time">15:00</p>
 						<p class="p-spend-slide__head">ご到着・チェックイン</p>
@@ -94,8 +41,9 @@
 						<img src="./assets/img/spend/spend-slide2.jpg" alt="玄関・廊下" width="185px" height="123px">
 						<img src="./assets/img/spend/spend-slide3.jpg" alt="お出迎えのお茶" width="123px" height="127px">
 					</div>
-				</div>
-				<div class="p-spend-slide__block p-spend-slide__block2">
+					<span class="border-line"></span>
+				</li>
+				<li class="p-spend-slide__block p-spend-slide__block2">
 					<div class="p-spend-slide__card p-spend-slide__card2">
 						<p class="p-spend-slide__time">16:00</p>
 						<p class="p-spend-slide__head">温泉を愉しむ</p>
@@ -108,8 +56,9 @@
 						<img src="./assets/img/spend/spend-slide5.jpg" alt="温泉2" width="186px" height="123px">
 						<img src="./assets/img/spend/spend-slide6.jpg" alt="温泉3" width="169px" height="123px">
 					</div>
-				</div>
-				<div class="p-spend-slide__block p-spend-slide__block3">
+					<span class="border-line"></span>
+				</li>
+				<li class="p-spend-slide__block p-spend-slide__block3">
 					<div class="p-spend-slide__card p-spend-slide__card3">
 						<p class="p-spend-slide__time">18:00</p>
 						<p class="p-spend-slide__head">ご夕食</p>
@@ -122,8 +71,9 @@
 						<img src="./assets/img/spend/spend-slide8.jpg" alt="玄関・廊下" width="142px" height="123px">
 						<img src="./assets/img/spend/spend-slide9.jpg" alt="お出迎えのお茶" width="153px" height="102px">
 					</div>
-				</div>
-				<div class="p-spend-slide__block p-spend-slide__block4">
+					<span class="border-line"></span>
+				</li>
+				<li class="p-spend-slide__block p-spend-slide__block4">
 					<div class="p-spend-slide__card p-spend-slide__card4">
 						<p class="p-spend-slide__time">19:30</p>
 						<p class="p-spend-slide__head">海辺を散歩</p>
@@ -136,8 +86,9 @@
 					<div class="p-spend-slide__accent p-spend-slide__accent4">
 						<img src="./assets/img/spend/spend-slide11.jpg" alt="客室" width="242px" height="162px">
 					</div>
-				</div>
-				<div class="p-spend-slide__block p-spend-slide__block5">
+					<span class="border-line"></span>
+				</li>
+				<li class="p-spend-slide__block p-spend-slide__block5">
 					<div class="p-spend-slide__card p-spend-slide__card5">
 						<p class="p-spend-slide__time">20:30</p>
 						<p class="p-spend-slide__head">二度目の温泉</p>
@@ -149,8 +100,9 @@
 					<div class="p-spend-slide__accent p-spend-slide__accent5">
 						<img src="./assets/img/spend/spend-slide13.jpg" alt="花" width="248px" height="165px">
 					</div>
-				</div>
-				<div class="p-spend-slide__block p-spend-slide__block6">
+					<span class="border-line"></span>
+				</li>
+				<li class="p-spend-slide__block p-spend-slide__block6">
 					<div class="p-spend-slide__card p-spend-slide__card6">
 						<p class="p-spend-slide__time">23:00</p>
 						<p class="p-spend-slide__head">就寝</p>
@@ -162,8 +114,9 @@
 					<div class="p-spend-slide__accent p-spend-slide__accent6">
 						<img src="./assets/img/spend/spend-slide15.jpg" alt="露天風呂2" width="262px" height="175px">
 					</div>
-				</div>
-				<div class="p-spend-slide__block p-spend-slide__block7">
+					<span class="border-line"></span>
+				</li>
+				<li class="p-spend-slide__block p-spend-slide__block7">
 					<div class="p-spend-slide__card p-spend-slide__card7">
 						<p class="p-spend-slide__time">7:00</p>
 						<p class="p-spend-slide__head">朝風呂</p>
@@ -176,8 +129,9 @@
 						<img src="./assets/img/spend/spend-slide17.jpg" alt="廊下" width="141px" height="198px">
 						<img src="./assets/img/spend/spend-slide18.jpg" alt="休憩所" width="170px" height="182px">
 					</div>
-				</div>
-				<div class="p-spend-slide__block p-spend-slide__block8">
+					<span class="border-line"></span>
+				</li>
+				<li class="p-spend-slide__block p-spend-slide__block8">
 					<div class="p-spend-slide__card p-spend-slide__card8">
 						<p class="p-spend-slide__time">8:00</p>
 						<p class="p-spend-slide__head">ご朝食</p>
@@ -189,8 +143,9 @@
 					<div class="p-spend-slide__accent p-spend-slide__accent8">
 						<img src="./assets/img/spend/spend-slide20.jpg" alt="客室" width="235px" height="147px">
 					</div>
-				</div>
-				<div class="p-spend-slide__block p-spend-slide__block9">
+					<span class="border-line"></span>
+				</li>
+				<li class="p-spend-slide__block p-spend-slide__block9">
 					<div class="p-spend-slide__card p-spend-slide__card9">
 						<p class="p-spend-slide__time">10:00</p>
 						<p class="p-spend-slide__head">チェックアウト</p>
@@ -199,8 +154,8 @@
 							<img src="./assets/img/spend/spend-slide21.jpg" alt="ご朝食・和食" width="453px" height="247px">
 						</div>
 					</div>
-				</div>
-			</div>
+				</li>
+			</ul>
 		</section>
 		<section class="p-spend-tour">
 			<div class="l-inner">
@@ -268,6 +223,7 @@
 			</div>
 		</section>
 	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 	<script src="./assets/js/script.min.js"></script>
