--- a/開発用/src/spend.html
+++ b/開発用/src/spend.html
@@ -26,59 +26,6 @@
 			</p>
 		</section>
 		<section class="p-spend-slide">
-            <div class="flow-progress">
-                <div class="flow-progress__item trigger-checkin">
-                  <span class="flow-progress__dots"></span>
-                  <span class="flow-progress__line">
-                    <span></span>
-                  </span>
-                </div>
-                <div class="flow-progress__item trigger-spa1">
-                  <span class="flow-progress__dots"></span>
-                  <span class="flow-progress__line">
-                    <span></span>
-                  </span>
-                </div>
-                <div class="flow-progress__item trigger-dinner">
-                  <span class="flow-progress__dots"></span>
-                  <span class="flow-progress__line">
-                    <span></span>
-                  </span>
-                </div>
-                <div class="flow-progress__item trigger-walking">
-                  <span class="flow-progress__dots"></span>
-                  <span class="flow-progress__line">
-                    <span></span>
-                  </span>
-                </div>
-                <div class="flow-progress__item trigger-spa2">
-                  <span class="flow-progress__dots"></span>
-                  <span class="flow-progress__line">
-                    <span></span>
-                  </span>
-                </div>
-                <div class="flow-progress__item trigger-retiring">
-                  <span class="flow-progress__dots"></span>
-                  <span class="flow-progress__line">
-                    <span></span>
-                  </span>
-                </div>
-                <div class="flow-progress__item trigger-spa3">
-                    <span class="flow-progress__dots"></span>
-                    <span class="flow-progress__line">
-                      <span></span>
-                    </span>
-                  </div>
-                <div class="flow-progress__item trigger-breakfast">
-                  <span class="flow-progress__dots"></span>
-                  <span class="flow-progress__line">
-                    <span></span>
-                  </span>
-                </div>
-                <div class="flow-progress__item trigger-checkin">
-                    <span class="flow-progress__dots"></span>
-                  </div>
-              </div>
             <div class="p-spend-slide__wrapper">
                 <div class="p-spend-slide__block p-spend-slide__block1">
                     <div class="p-spend-slide__card p-spend-slide__card1">
@@ -95,6 +42,7 @@
                         <img src="./assets/img/spend/spend-slide3.jpg" alt="お出迎えのお茶" width="123px" height="127px">
                     </div>
                 </div>
+                <span class="border-line"></span> 
                 <div class="p-spend-slide__block p-spend-slide__block2">
                     <div class="p-spend-slide__card p-spend-slide__card2">
                         <p class="p-spend-slide__time">16:00</p>
@@ -109,6 +57,7 @@
                         <img src="./assets/img/spend/spend-slide6.jpg" alt="温泉3" width="169px" height="123px">
                     </div>
                 </div>
+                <span class="border-line"></span> 
                 <div class="p-spend-slide__block p-spend-slide__block3">
                     <div class="p-spend-slide__card p-spend-slide__card3">
                         <p class="p-spend-slide__time">18:00</p>
@@ -123,6 +72,7 @@
                         <img src="./assets/img/spend/spend-slide9.jpg" alt="お出迎えのお茶" width="153px" height="102px">
                     </div>
                 </div>
+                <span class="border-line"></span> 
                 <div class="p-spend-slide__block p-spend-slide__block4">
                     <div class="p-spend-slide__card p-spend-slide__card4">
                         <p class="p-spend-slide__time">19:30</p>
@@ -137,6 +87,7 @@
                         <img src="./assets/img/spend/spend-slide11.jpg" alt="客室" width="242px" height="162px">
                     </div>
                 </div>
+                <span class="border-line"></span> 
                 <div class="p-spend-slide__block p-spend-slide__block5">
                     <div class="p-spend-slide__card p-spend-slide__card5">
                         <p class="p-spend-slide__time">20:30</p>
@@ -163,6 +114,7 @@
                         <img src="./assets/img/spend/spend-slide15.jpg" alt="露天風呂2" width="262px" height="175px">
                     </div>
                 </div>
+                <span class="border-line"></span> 
                 <div class="p-spend-slide__block p-spend-slide__block7">
                     <div class="p-spend-slide__card p-spend-slide__card7">
                         <p class="p-spend-slide__time">7:00</p>
@@ -177,6 +129,7 @@
                         <img src="./assets/img/spend/spend-slide18.jpg" alt="休憩所" width="170px" height="182px">
                     </div>
                 </div>
+                <span class="border-line"></span> 
                 <div class="p-spend-slide__block p-spend-slide__block8">
                     <div class="p-spend-slide__card p-spend-slide__card8">
                         <p class="p-spend-slide__time">8:00</p>
@@ -190,6 +143,7 @@
                         <img src="./assets/img/spend/spend-slide20.jpg" alt="客室" width="235px" height="147px">
                     </div>
                 </div>
+                <span class="border-line"></span> 
                 <div class="p-spend-slide__block p-spend-slide__block9">
                     <div class="p-spend-slide__card p-spend-slide__card9">
                         <p class="p-spend-slide__time">10:00</p>
@@ -268,6 +222,7 @@
             </div>
 		</section>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="./assets/js/script.min.js"></script>
