トップページの温泉、料理、客室のHTML,cssの大枠作成

--- a/開発用/public/index.html
+++ b/開発用/public/index.html
@@ -81,15 +81,39 @@
 
 		</div>
 	</section>
-	<div class="p-concent">
+	<div class="p-content">
 		<div class="p-content__wrap">
 			<div class="p-content__block">
-				<div class="c-content__img">
+				<a href="#" class="c-content__img">
 					<h3 class="c-content__title">温泉</h3>
-				</div>
+				</a>
 				<div class="p-content__text">
 					<h4 class="c-content__lead">温泉</h4>
-					<p class="c-content__desc"></p>
+					<p class="c-content__desc">海を眺めながらゆったりとした時間をお過ごしください</p>
+					<a href="" class="c-content__link">詳しく見る</a>
+				</div>
+			</div>
+			<div class="p-content__block p-content__cooking">
+				<div class="p-content__text p-content__text--cooking">
+					<h4 class="c-content__lead">料理</h4>
+					<p class="c-content__desc">目の前の海で採れた海の幸を
+						ご堪能ください<br>
+						季節ごとに変わる一品料理も
+						オススメです</p>
+					<a href="" class="c-content__link c-content__link--cooking">詳しく見る</a>
+				</div>
+				<a href="#" class="c-content__img c-content__img--cooking">
+					<h3 class="c-content__title c-content__title--vertical">料理</h3>
+				</a>
+			</div>
+			<div class="p-content__block  p-content__guestroom">
+				<a href="#" class="c-content__img c-content__img--guestroom">
+					<h3 class="c-content__title c-content__title--vertical">客室</h3>
+				</a>
+				<div class="p-content__text p-content__text--guestroom">
+					<h4 class="c-content__lead">客室</h4>
+					<p class="c-content__desc">窓を開けると波の音が聞こえてきます
+						自然に包まれながらお休みください</p>
 					<a href="" class="c-content__link">詳しく見る</a>
 				</div>
 			</div>
