--- a/開発用/src/index.html
+++ b/開発用/src/index.html
@@ -29,7 +29,7 @@
       <img class="c-top__logo" src="./assets/img/top/logo.png" alt="KIZUNAYAロゴ">
       <h1 class="p-mv__title">KIZUNAYA</h1>
     </div>
-    <div class="c-scrolldown"><span>Scroll</span></div>
+    <div class="c-scrolldown"><span>SCROLL</span></div>
   </header>
   <div class="p-concept">
     <div class="p-concept__wrap">
@@ -80,16 +80,16 @@
         </a>
         <div class="p-content__text">
           <h4 class="c-content__lead">温泉</h4>
-          <p class="c-content__desc">海を眺めながらゆったりとした時間をお過ごしください</p>
+          <p class="c-content__desc">海を眺めながらゆったりとした時間<br>をお過ごしください</p>
           <a href="" class="c-content__link">詳しく見る</a>
         </div>
       </div>
       <div class="p-content__block p-content__cooking">
         <div class="p-content__text p-content__text--cooking">
           <h4 class="c-content__lead">料理</h4>
-          <p class="c-content__desc">目の前の海で採れた海の幸を
+          <p class="c-content__desc">目の前の海で採れた海の幸を<br>
             ご堪能ください<br>
-            季節ごとに変わる一品料理も
+            季節ごとに変わる一品料理も<br>
             オススメです</p>
           <a href="" class="c-content__link c-content__link--cooking">詳しく見る</a>
         </div>
@@ -110,6 +110,9 @@
       </div>
     </div>
   </div>
+  <footer class="l-footer">
+
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   <!-- GSAPライブラリの読み込み -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
