--- a/開発用/public/spend.html
+++ b/開発用/public/spend.html
@@ -21,7 +21,7 @@
 			<a href="#" class="c-search-btn__link">空 室 検 索</a>
 		</button>
 		<section class="c-main-message">
-			<p class="c-main-message__text">
+			<p class="c-spend-message__text">
 				テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
 			</p>
 		</section>
