--- a/開発用/public/index.html
+++ b/開発用/public/index.html
@@ -152,7 +152,7 @@
 			</div>
 		</div>
 		<div class="p-footer__sns--items">
-			<a href="#"><i class="fa-brands fa-facebook-f fa-3x" style="color:#fafafa;"></i></a>
+			<a href="#"><i class="fa-brands fa-facebook-f fa-3x" style="color:#ffffff;"></i></a>
 			<a href=""><i class="fa-brands fa-instagram fa-3x" style="color:#ffffff;"></i></a>
 		</div>
 		<p class="c-copyright">©︎2023 KIZUNAYA</p>
