予約はこちらセクション作成

--- a/開発用/src/guest-room.html
+++ b/開発用/src/guest-room.html
@@ -188,5 +188,35 @@
                 </div>
             </section>
         </main>
+        <footer class="l-footer">
+            <div class="p-footer__wrap">
+              <div class="p-footer__info">
+                <div class="c-footer__logo">
+                  <img src="assets/img/top/logo.png" alt="フッターロゴ">
+                </div>
+                <h3 class="c-mv__title c-mv__title--footer">KIZUNAYA</h3>
+                <p class="c-address__number">
+                  〒123-4567</p>
+                <p class="c-address">静岡県下田市白浜1-1</p>
+                <p class="c-tel__number">TEL 0123-45-6789</p>
+              </div>
+              <div class="p-footer__nav--wrap">
+                <div class="p-footer__link--nav">
+                  <a class="c-footer__nav--item" href="#"><span>ー</span>　温泉</a>
+                  <a class="c-footer__nav--item" href="#"><span>ー</span>　料理</a>
+                  <a class="c-footer__nav--item" href="#"><span>ー</span>　客室</a>
+                </div>
+                <div class="p-footer__link--nav">
+                  <a class="c-footer__nav--item" href="#"><span>ー</span>　過ごし方</a>
+                  <a class="c-footer__nav--item" href="#"><span>ー</span>　アクセス</a>
+                </div>
+              </div>
+            </div>
+            <div class="p-footer__sns--items">
+              <a href="#"><i class="fa-brands fa-facebook-f fa-3x" style="color:#ffffff;"></i></a>
+              <a href=""><i class="fa-brands fa-instagram fa-3x" style="color:#ffffff;"></i></a>
+            </div>
+            <p class="c-copyright">©︎2023 KIZUNAYA</p>
+          </footer>
     </body>
 </html>
