--- a/開発用/public/guest-room.html
+++ b/開発用/public/guest-room.html
@@ -184,7 +184,9 @@
 					ご予約は専用フォームにて承ります
 				</p>
 				<a class="c-reservation-btn" href="#">ご予約はこちら</a>
-				<p class="p-reservation__text p-reservation__text--small">24時間受付中</p>
+				<p class="p-reservation__text">
+					ご予約は専用フォームにて承ります
+				</p>
 			</div>
 		</section>
 	</main>
