ハンバーガーメニューCSS完了

--- a/開発用/public/guest-room.html
+++ b/開発用/public/guest-room.html
@@ -10,8 +10,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;800&family=Zen+Kaku+Gothic+New:wght@300;400;500;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../public/assets/css/reset.css">
-	<link rel="stylesheet" href="../public/assets/css/style.min.css">
+	<link rel="stylesheet" href="./assets/css/reset.css">
+	<link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body id="guest-room">
@@ -22,11 +22,11 @@
 			<span class="c-drawer-btn__bar"></span>
 		</div>
 		<nav class="p-gnav">
-			<a class="c-logo p-gnav__logo" href="index.html">
-				<p class="c-logo__img">
-					<img src="../public/assets/img/common/logo-white.png" alt="きずなや">
+			<a class="p-gnav__logo" href="index.html">
+				<p class="p-gnav__logo-img">
+					<img src="./assets/img/common/logo-white.png" alt="きずなや">
 				</p>
-				<p class="c-logo__text">KIZUNAYA</p>
+				<p class="c-mv__title p-gnav__logo-text">KIZUNAYA</p>
 			</a>
 			<ul class="p-gnav__nav js-link" id="gnav">
 				<li class="p-gnav__nav-list">
@@ -55,11 +55,11 @@
 					</a>
 				</li>
 			</ul>
-			<div class="c-drawer-btn p-gnav__btn">
-				<span class="c-drawer-btn__bar"></span>
-				<span class="c-drawer-btn__bar"></span>
-				<span class="c-drawer-btn__bar"></span>
-			</div>
+			<!-- <div class="c-drawer-btn p-gnav__btn">
+                    <span class="c-drawer-btn__bar"></span>
+                    <span class="c-drawer-btn__bar"></span>
+                    <span class="c-drawer-btn__bar"></span>
+                </div> -->
 		</nav>
 	</header>
 	<!-- /.l-header -->
@@ -74,13 +74,13 @@
 				<div class="p-room__version">
 					<div class="p-room__imgs">
 						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/sazanami1.jpg" alt="漣のベッドルーム">
+							<img src="./assets/img/guest-room/sazanami1.jpg" alt="漣のベッドルーム">
 						</div>
 						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/sazanami2.jpg" alt="漣の客室">
+							<img src="./assets/img/guest-room/sazanami2.jpg" alt="漣の客室">
 						</div>
 						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/sazanami3.jpg" alt="鹿威し">
+							<img src="./assets/img/guest-room/sazanami3.jpg" alt="鹿威し">
 						</div>
 					</div>
 					<div class="p-room__sentence">
@@ -98,13 +98,13 @@
 				<div class="p-room__version">
 					<div class="p-room__imgs">
 						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/nagi1.jpg" alt="凪のベッドルーム">
+							<img src="./assets/img/guest-room/nagi1.jpg" alt="凪のベッドルーム">
 						</div>
 						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/nagi2.jpg" alt="タオル">
+							<img src="./assets/img/guest-room/nagi2.jpg" alt="タオル">
 						</div>
 						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/nagi3.jpg" alt="ソファ">
+							<img src="./assets/img/guest-room/nagi3.jpg" alt="ソファ">
 						</div>
 					</div>
 					<div class="p-room__sentence">
@@ -123,13 +123,13 @@
 				<div class="p-room__version">
 					<div class="p-room__imgs">
 						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/sazanami1.jpg" alt="渚のベッドルーム">
+							<img src="./assets/img/guest-room/sazanami1.jpg" alt="渚のベッドルーム">
 						</div>
 						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/sazanami2.jpg" alt="渚の客室内">
+							<img src="./assets/img/guest-room/sazanami2.jpg" alt="渚の客室内">
 						</div>
 						<div class="p-room__img">
-							<img src="../public/assets/img/guest-room/sazanami3.jpg" alt="渚のバスルーム">
+							<img src="./assets/img/guest-room/sazanami3.jpg" alt="渚のバスルーム">
 						</div>
 					</div>
 					<div class="p-room__sentence">
@@ -161,7 +161,7 @@
 			<div class="l-inner">
 				<div class="p-check-io__contents">
 					<div class="p-check-io__icon">
-						<img src="../public/assets/img/guest-room/icon-checkIn.svg" alt="アーリーチェックイン">
+						<img src="./assets/img/guest-room/icon-checkIn.svg" alt="アーリーチェックイン">
 					</div>
 					<p class="p-check-io__title">アーリーチェックイン</p>
 					<p class="p-check-io__text">早めのチェックインで明るいうちから温泉を愉しめます。</p>
@@ -169,7 +169,7 @@
 				<!-- /.Facility__contents -->
 				<div class="p-check-io__contents">
 					<div class="p-check-io__icon">
-						<img src="../public/assets/img/guest-room/icon-checkOut.svg" alt="アーリーチェックアウト">
+						<img src="./assets/img/guest-room/icon-checkOut.svg" alt="アーリーチェックアウト">
 					</div>
 					<p class="p-check-io__title">アーリーチェックアウト</p>
 					<p class="p-check-io__text">旅の余韻を感じながらゆっくりお帰りの準備をしていただけます。</p>
@@ -184,8 +184,8 @@
 					ご予約は専用フォームにて承ります
 				</p>
 				<a class="c-reservation-btn" href="#">ご予約はこちら</a>
-				<p class="p-reservation__text">
-					ご予約は専用フォームにて承ります
+				<p class="p-reservation__text p-reservation__text--small">
+					24時間受付中
 				</p>
 			</div>
 		</section>
@@ -221,5 +221,7 @@
 		<p class="c-copyright">©︎2023 KIZUNAYA</p>
 	</footer>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="./assets/js/script.min.js"></script>
 
 </html>
