下層ページのヘッダー スマホ用画像設定前

--- a/開発用/public/guest-room.html
+++ b/開発用/public/guest-room.html
@@ -21,7 +21,7 @@
 		<div class="c-drawer-btn l-lower-headerr__btn">
 			<span class="c-drawer-btn__bar"></span>
 		</div>
-		<nav class="p-gnav">
+		<nav class="p-gnav" id="gnav">
 			<a class="p-gnav__logo" href="index.html">
 				<p class="p-gnav__logo-img">
 					<img src="./assets/img/common/logo-white.png" alt="きずなや">
@@ -220,8 +220,8 @@
 		</div>
 		<p class="c-copyright">©︎2023 KIZUNAYA</p>
 	</footer>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="./assets/js/script.min.js"></script>
 </body>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="./assets/js/script.min.js"></script>
 
 </html>
