温泉ページHTML,PC表示修正

--- a/開発用/public/index.html
+++ b/開発用/public/index.html
@@ -131,7 +131,7 @@
 		<div class="p-footer__wrap">
 			<div class="p-footer__info">
 				<div class="c-footer__logo">
-					<img src="assets/img/top/logo.png" alt="フッターロゴ">
+					<img src="assets/img/top/logo.png" alt="KIZUNAYAロゴ">
 				</div>
 				<h3 class="c-mv__title c-mv__title--footer">KIZUNAYA</h3>
 				<p class="c-address__number">
