ハンバーガーメニュー、下層ページヘッダー画像完了。パーフェクトピクセル済。ハンバーガーメニューのフェードアニメーション未実装。

--- a/開発用/src/guest-room.html
+++ b/開発用/src/guest-room.html
@@ -13,8 +13,8 @@
   <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body id="guest-room">
-        <header class="l-lower-header">
-            <h1 class="c-title l-lower-header__title">客 室</h1>
+        <header class="l-lower-header" id="header">
+            <h1 class="l-lower-header__title">客 室</h1>
             <!-- ハンバーガーメニュー -->
             <div class="c-drawer-btn l-lower-headerr__btn">
                 <span class="c-drawer-btn__bar"></span>
@@ -28,27 +28,27 @@
                 </a>
                 <ul class="p-gnav__nav js-link" id="gnav">
                     <li class="p-gnav__nav-list">
-                        <a href="index.html" class="p-gnav__nav-link p-gnev-anm">
+                        <a href="index.html" class="p-gnav__nav-link g-nav-anm">
                             温泉
                         </a>
                     </li>
                     <li class="p-gnav__nav-list">
-                        <a href="index.html" class="p-gnav__nav-link p-gnev-anm">
+                        <a href="index.html" class="p-gnav__nav-link g-nav-anm">
                             客室
                         </a>
                     </li>
                     <li class="p-gnav__nav-list">
-                        <a href="index.html" class="p-gnav__nav-link p-gnev-anm">
+                        <a href="index.html" class="p-gnav__nav-link g-nav-anm">
                             料理
                         </a>
                     </li>
                     <li class="p-gnav__nav-list">
-                        <a href="index.html" class="p-gnav__nav-link p-gnev-anm">
+                        <a href="index.html" class="p-gnav__nav-link g-nav-anm">
                             過ごし方
                         </a>
                     </li>
                     <li class="p-gnav__nav-list">
-                        <a href="index.html" class="p-gnav__nav-link p-gnev-anm">
+                        <a href="index.html" class="p-gnav__nav-link g-nav-anm">
                             アクセス
                         </a>
                     </li>
